--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -1,23 +1,40 @@
-name: Sync fork
+name: Upstream Sync
+
+permissions:
+  contents: write
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天凌晨12点运行一次
-  workflow_dispatch: # 允许手动触发
+    - cron: "0 0 * * *" # every day
+  workflow_dispatch:
 
 jobs:
-  sync:
+  sync_latest_from_upstream:
+    name: Sync latest commits from upstream repo
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        persist-credentials: false # 避免使用默认token
+    if: ${{ github.event.repository.fork }}
 
-    - name: Pull changes
-      uses: wei/pull@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 使用个人token
-        UPSTREAM_REPO: Harry-zklcdc/go-proxy-bingai # B库的地址
-        UPSTREAM_BRANCH: master # B库的分支
-        FORK_BRANCH: master # A库的分支
+    steps:
+      # Step 1: run a standard checkout action
+      - name: Checkout target repo
+        uses: actions/checkout@v3
+
+      # Step 2: run the sync action
+      - name: Sync upstream changes
+        id: sync
+        uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
+        with:
+          upstream_sync_repo: Harry-zklcdc/go-proxy-bingai
+          upstream_sync_branch: master
+          target_sync_branch: master
+          target_repo_token: ${{ secrets.GITHUB_TOKEN }} # automatically generated, no need to set
+
+          # Set test_mode true to run tests instead of the true action!!
+          test_mode: false
+
+      - name: Sync check
+        if: failure()
+        run: |
+          echo "[Error] 由于上游仓库的 workflow 文件变更，导致 GitHub 自动暂停了本次自动更新，你需要手动 Sync Fork 一次"
+          echo "[Error] Due to a change in the workflow file of the upstream repository, GitHub has automatically suspended the scheduled automatic update. You need to manually sync your fork."
+          exit 1
