--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -10,6 +10,9 @@ name: Publish Docker image
 
 on:
   workflow_dispatch: # 手动触发
+  workflows: ["auto-pr"]
+  types:
+    - completed
   push:
     # 每次 push tag 时进行构建，不需要每次 push 都构建。 使用通配符匹配每次 tag 的提交，记得 tag 名一定要以 v 开头
     tags:
@@ -64,5 +67,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          tag_with_ref: latest
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
