--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -61,6 +61,7 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: nothingnessvoid/go-proxy-bingai
+          tag_with_ref: latest 
 
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -68,5 +69,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: latest
           labels: ${{ steps.meta.outputs.labels }}
