--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -12,6 +12,7 @@ on:
   workflow_dispatch: # 手动触发
   workflow_run:
     workflows: ["auto-pr"]
+    branches: [main]
     types:
       - completed
   push:
