--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -37,6 +37,12 @@ jobs:
         with:
           images: nothingnessvoid/go-proxy-bingai
 
+      - name: Create and use a new builder instance
+        run: |
+          docker buildx create --name mybuilder
+          docker buildx use mybuilder
+
+
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
